myteo/test/analyze/type_check/while.myte
module test

fun main() {
  while (true) {}
  while (1) {}
}